# Prosa

./: .SRCINFO  .gitignore  Capitulo-de-livro.docx  PKGBUILD  PLUGINS.md  PRIVACY.md  README.md  create_issues.sh  esbuild.config.mjs  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
examples/plugins/hello-storage/: index.js  manifest.json  sdk.js
examples/plugins/zotero-sync/: index.js  manifest.json  sdk.js
native/: Cargo.toml
native/prosa-doc/: Cargo.toml
native/prosa-doc/src/: bibliography.rs  docx.rs  lib.rs  odt.rs  rtf.rs  sync_watcher.rs  templates.rs  update_check.rs  version_history.rs  wikilink.rs  workspace.rs  xml_util.rs
native/prosa-doc/src/ai/: actions.rs  credentials.rs  mod.rs  providers.rs
native/prosa-gtk/: Cargo.toml
native/prosa-gtk/data/: br.com.rodrigobrito.Prosa.Native.desktop
native/prosa-gtk/src/: ai_ui.rs  bibliography_ui.rs  citation.rs  color_style.rs  find_replace.rs  font_style.rs  formatting.rs  graph_view.rs  header_footer_ui.rs  live_pagination.rs  main.rs  outline.rs  page_geometry.rs  page_rulers.rs  paged_editor.rs  pagination.rs  print.rs  ruler_preferences.rs  save_format.rs  spellcheck.rs  sync_ui.rs  template_dialog.rs  updater_ui.rs  version_history_ui.rs  wikilink.rs
native/prosa-gtk/wix/: main.wxs
packaging/aur/: .SRCINFO  PKGBUILD  PKGBUILD.in  README.md
scripts/: install-local.sh  install-user.sh  install.sh
src/main/: ai-credentials.ts  ai-service.ts  backup-service.ts  converters.ts  doc.ts  epub-export-service.ts  epub.ts  export-service.ts  file-formats.ts  file-manager.ts  fonts.ts  frontmatter.ts  html-export-service.ts  html-export.ts  html-runs.ts  index.ts  odt.ts  open-service.ts  plugin-manifest.ts  plugins.ts  preload.ts  rtf.ts  save-service.ts  settings.ts  spellcheck.ts  sync-watcher.ts  templates.ts  updater.ts  version-history.ts  workspace.ts
src/renderer/: global.d.ts  index.html  index.ts  splash.html  styles.css
src/renderer/components/: abnt-dialog.ts  ai-assistant-panel.ts  ai-result-dialog.ts  ai-settings-dialog.ts  app-dialogs.ts  backlinks-panel.ts  bibliography-dialog.ts  citation-manager.ts  command-palette.ts  document-template-dialog.ts  find-replace.ts  focus-timer.ts  font-profile-dialog.ts  font-profiles.ts  format-dialog.ts  frontmatter-dialog.ts  graph-view.ts  html-export-dialog.ts  metadata-panel.ts  note-panel.ts  pdf-preset-dialog.ts  plugin-dialog.ts  project-tour-dialog.ts  search-modal.ts  sidebar-outline.ts  styles-panel.ts  sync-notification.ts  template-dialog.ts  theme-engine.ts  theme-selector.ts  toc-dialog.ts  update-notification.ts  version-compare-dialog.ts  word-count-bar.ts  workspace-library.ts  workspace-relations.ts
src/renderer/editor/: editor.ts  toolbar.ts
src/renderer/editor/extensions/: citation.ts  find-replace.ts  font-size.ts  math-block.ts  note-reference.ts  page-break.ts  resizable-image.ts  table-of-contents.ts  tag.ts  wikilink.ts
src/renderer/pages/: command-palette.ts  document-controllers.ts  document.ts  welcome.ts
src/renderer/utils/: icons.ts
src/shared/: ai-actions.ts  ai-languages.ts  ai-settings.ts  ai-tones.ts  bibliography.ts  document-templates.ts  document-utils.ts  document-variables.ts  table-of-contents.ts  types.ts
tests/: ai-actions.test.ts  ai-languages.test.ts  ai-service.test.ts  ai-settings.test.ts  ai-tones.test.ts  bibliography.test.ts  document-templates.test.ts  document-utils-links.test.ts  document-variables.test.ts  docx-export.test.ts  docx-import.test.ts  editor.test.ts  epub.test.ts  file-formats.test.ts  frontmatter.test.ts  header-footer.test.ts  html-export.test.ts  markdown.test.ts  math-markdown.test.ts  odt.test.ts  pdf-presets.test.ts  plugin-manifest.test.ts  rtf.test.ts  smart-quotes.test.ts  table-of-contents.test.ts
tests/e2e/: renderer.e2e.test.ts
