[package]
name = "prosa-doc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Modelo de documento nativo do Prosa, compatível com o formato .prosa (JSON) usado pela versão Electron/TipTap."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
quick-xml = "0.41"
zip = { version = "8", default-features = false, features = ["deflate"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
percent-encoding = "2"
regex = "1"
