[package]
name = "prosa-gtk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Casca nativa GTK4 + libadwaita do Prosa (MVP: editor básico e abrir/salvar .prosa)."

[[bin]]
name = "prosa"
path = "src/main.rs"

[dependencies]
prosa-doc = { path = "../prosa-doc" }
gtk = { package = "gtk4", version = "0.9", features = ["v4_12"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
glib = "0.20"
pango = "0.20"
pangocairo = "0.20"
cairo = { package = "cairo-rs", version = "0.20" }
enchant = "0.3"
regex = "1"
